[package]
name = "lmrs"
version = "0.1.0"
edition = "2024"

[features]
default = ["backend", "backend-multimodal", "multimodal", "desktop"]
backend = [
    "dep:tokio-tungstenite",
    "dep:futures-util",
    "dep:tokio",
    "dep:serde_json",
    "dep:serde",
]
desktop = ["dep:dioxus", "dep:dioxus-desktop", "dep:pulldown-cmark"]
backend-multimodal = ["dep:base64", "dep:image"]
multimodal = ["dep:image"]

[dependencies]
wide = { version = "^0.8" }
memmap2 = { version = "^0.9" }
rayon = { version = "^1.11" }
chrono = { version = "^0.4" }
zerocopy = { version = "^0.8", features = ["std", "simd"] }
clap = { version = "^4.5", features = ["derive"] }

image = { version = "^0.25", optional = true }
tokio-tungstenite = { version = "^0.28", optional = true }
futures-util = { version = "^0.3", default-features = false, features = [
    "sink",
    "std",
], optional = true }
tokio = { version = "^1.48", features = ["full"], optional = true }
base64 = { version = "^0.22", optional = true }

serde = { version = "^1.0", features = ["derive"], optional = true }
serde_json = { version = "^1.0", optional = true }

dioxus = { version = "0.5.0", optional = true }
dioxus-desktop = { version = "0.5.0", optional = true }
pulldown-cmark = { version = "^0.13", default-features = false, features = [
    "html",
    "simd",
], optional = true }


[[bin]]
name = "backend"
required-features = ["backend"]

[[bin]]
name = "desktop"
required-features = ["desktop"]

[profile.release]
codegen-units = 1
lto = true
