[project]
name = "lm-rs"
version = "0.1.0"
authors = [{ name = "SaelKimberly", email = "sael.kimberly@yandex.ru" }]
requires-python = ">=3.13.9"

dependencies = [
    # deps
    "safetensors>=0.6.2",
    "torch==2.9.0+cpu",
    "transformers>=4.57.1",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
